--- a/html_css/src/views/partials/footer.ejs
+++ b/html_css/src/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 
-<div class="row justify-content-center text-white mt-3" id="footer">
+<footer class="row justify-content-center text-white mt-3" id="footer">
     <div class="col-12 col-md-6 p-0 pl-2 m-0 text-center text-md-left align-self-center">
         <a href="#" alt="Instagram"><i class="fa fa-instagram ml-1"></i></a>
         <a href="#" alt="Facebook"><i class="fa fa-facebook-square ml-1"></i></a>
@@ -7,7 +7,7 @@
         <a href="#" alt="You Tube"><i class="fa fa-youtube-play ml-1"></i></a>
     </div>
     <div class="col-12 col-md-6 p-0 pr-2 m-0 text-center text-md-right align-self-center">Todos los derechos reservados - Copyright 2020</div>
-</div>
+</footer>
 
 <script src="../../../js/popper.js"></script>
 <script src="../../../js/jquery.js"></script>
