parlante logueado img

--- a/html_css/src/views/login.ejs
+++ b/html_css/src/views/login.ejs
@@ -60,7 +60,7 @@
 			<h3 class="text-center">Ya estas logueado, mira arriba a la derecha! Ahi estas</h3>
 		</div>
 		<div class="col-12 text-center">
-			<img src="../../images/parlante_logueado.png" class="img-fluid " width="350px" alt="">
+			<img src="../../images/parlante_logueado.PNG" class="img-fluid " width="350px" alt="">
 		</div>
 	</div>
 <% } %> 
